Table users {
  id uuid [primary key]
  email varchar
  password varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table columns {
  id uuid [primary key]
  title varchar
  user_id uuid
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table cards {
  id uuid [primary key]
  title varchar
  description text
  column_id uuid
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table comments {
  id uuid [primary key]
  text text
  card_id uuid
  user_id uuid
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: columns.user_id > users.id
Ref: cards.column_id > columns.id
Ref: comments.card_id > cards.id
Ref: comments.user_id > users.id
